--- a/css/default-edit.css
+++ b/css/default-edit.css
@@ -1,4 +1,65 @@
+/* buttons */
+.default-button {
+    font-size: 20px;
+    min-height: 80px;
+    min-width: 240px;
+    padding: 20px 40px;
+    border-radius: 80px;
+    line-height: 1.3;
+    font-weight: 500;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 1px solid #231F20;
+    color: #231F20;
+    transition: 0.3s;
+}
+.default-button:hover {
+    border-color: var(--theme__color1);
+    color: var(--theme__color1);
+}
+
+.default-button--theme1 {
+    background: var(--theme__color1);
+    color: #fff;
+    border-color: transparent;
+}
+.default-button--theme1:hover {
+    color: #fff;
+    background: #ff5100;
+    border-color: transparent;
+}
+
+
+.sm-button {
+    font-size: 16px;
+    padding: 14px 33px;
+    border-radius: 80px;
+    line-height: 1.3;
+    font-weight: 500;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background: #fff;
+    color: #231F20;
+    transition: 0.3s;
+}
+.sm-button:hover {
+    color: #fff;
+    background: var(--theme__color1);
+}
+/* buttons-end */
+
+
 /* small-tools */
+.text-uppercase {
+    text-transform: uppercase;
+}
+.text-normal {
+    text-transform: none !important;
+}
 .underline {
     text-decoration: underline !important;
 }
@@ -204,6 +265,48 @@
 }
 
 
+
+/* --preloader-- */
+#preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow: hidden;
+    background: #fff;
+  }
+  #preloader:before {
+    content: "";
+    position: fixed;
+    top: calc(50% - 30px);
+    left: calc(50% - 30px);
+    border: 6px solid var(--theme__color1);
+    border-top-color: #e2eefd;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    -webkit-animation: animate-preloader 1s linear infinite;
+    animation: animate-preloader 1s linear infinite;
+  }
+  @-webkit-keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+  }
+  @keyframes animate-preloader {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+  }
+  /* --preloader-end-- */
 
 
 
