--- a/css/responsive.css
+++ b/css/responsive.css
@@ -289,11 +289,55 @@
     .fl-menu {
         gap: 15px;
     }
+
+
+    .drop__main-menu li a {
+        font-size: 24px;
+    }
+    .drop__main-menu {
+        gap: 9px;
+    }
+    .drop-menu__left {
+        width: 200px;
+        margin-right: 20px;
+    }
+    .drop-menu__social h4 {
+        font-size: 30px;
+    }
+    .drop-menu__social {
+        gap: 30px;
+    }
+    .drop-menu__social ul {
+        gap: 18px;
+    }
+    .drop-menu__r-cont p {
+        font-size: 15px;
+    }
+    .drop-menu__r-cont h4 {
+        font-size: 16px;
+        margin: 0 0 10px;
+    }
+    .drop-menu__r-cont {
+        margin: 30px 0 0;
+        padding: 28px 0 0;
+    }
+    .drop-menu__r-ellipse-start {
+        height: 160px;
+        width: 160px;
+    }
+    .drop-menu__title {
+        padding: 25px 0;
+    }
+    .drop-menu__closer {
+        font-size: 25px;
+    }
 }   
 
 
 @media (max-width: 991px) {
- 
+    .drop-menu__main {
+        padding: 0;
+    }
 }
 
 
@@ -531,6 +575,21 @@
         order: -1;
         height: 240px;
     }
+
+
+    .drop__main-menu li a {
+        font-size: 16px;
+    }
+    .drop-menu__left {
+        width: 115px;
+        margin-right: 12px;
+    }
+    .drop-menu__social h4 {
+        font-size: 20px;
+    }
+    .drop-menu__social {
+        gap: 20px;
+    }
 }
 
 
@@ -555,5 +614,13 @@
 @media (max-width: 370px) {
     .h2 {
         font-size: 27px;
+    }
+
+    .drop__main-menu li a {
+        font-size: 14px;
+    }
+    .drop-menu__left {
+        width: 97px;
+        margin-right: 10px;
     }
 }
